// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for bugs 1`] = `
<Fragment>
  <ForwardRef(Link)
    aria-label="overview.see_list_of_x_y_issues.1.0.metric.bugs.name"
    className="overview-measures-value text-light"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?pullRequest=1001&resolved=false&types=BUG&inNewCodePeriod=false&id=my-project",
      }
    }
  >
    1
  </ForwardRef(Link)>
  <BugIcon
    className="big-spacer-left little-spacer-right"
  />
  metric.bugs.name
</Fragment>
`;

exports[`should render correctly for bugs 2`] = `
<Fragment>
  <ForwardRef(Link)
    aria-label="overview.see_list_of_x_y_issues.1.0.metric.new_bugs.name"
    className="overview-measures-value text-light"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?pullRequest=1001&resolved=false&types=BUG&inNewCodePeriod=true&id=my-project",
      }
    }
  >
    1
  </ForwardRef(Link)>
  <BugIcon
    className="big-spacer-left little-spacer-right"
  />
  metric.new_bugs.name
</Fragment>
`;

exports[`should render correctly for code smells 1`] = `
<Fragment>
  <ForwardRef(Link)
    aria-label="overview.see_list_of_x_y_issues.1.0.metric.code_smells.name"
    className="overview-measures-value text-light"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?pullRequest=1001&resolved=false&types=CODE_SMELL&inNewCodePeriod=false&id=my-project",
      }
    }
  >
    1
  </ForwardRef(Link)>
  <CodeSmellIcon
    className="big-spacer-left little-spacer-right"
  />
  metric.code_smells.name
</Fragment>
`;

exports[`should render correctly for code smells 2`] = `
<Fragment>
  <ForwardRef(Link)
    aria-label="overview.see_list_of_x_y_issues.1.0.metric.new_code_smells.name"
    className="overview-measures-value text-light"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?pullRequest=1001&resolved=false&types=CODE_SMELL&inNewCodePeriod=true&id=my-project",
      }
    }
  >
    1
  </ForwardRef(Link)>
  <CodeSmellIcon
    className="big-spacer-left little-spacer-right"
  />
  metric.new_code_smells.name
</Fragment>
`;

exports[`should render correctly for hotspots 1`] = `
<Fragment>
  <ForwardRef(Link)
    aria-label="overview.see_list_of_x_y_issues.1.0.metric.security_hotspots.name"
    className="overview-measures-value text-light"
    to={
      {
        "hash": "",
        "pathname": "/security_hotspots",
        "search": "?id=my-project&pullRequest=1001&inNewCodePeriod=false",
      }
    }
  >
    1
  </ForwardRef(Link)>
  <SecurityHotspotIcon
    className="big-spacer-left little-spacer-right"
  />
  metric.security_hotspots.name
  <HelpTooltip
    className="little-spacer-left"
    overlay="tooltip text"
  />
</Fragment>
`;

exports[`should render correctly for hotspots 2`] = `
<Fragment>
  <ForwardRef(Link)
    aria-label="overview.see_list_of_x_y_issues.1.0.metric.new_security_hotspots.name"
    className="overview-measures-value text-light"
    to={
      {
        "hash": "",
        "pathname": "/security_hotspots",
        "search": "?id=my-project&pullRequest=1001&inNewCodePeriod=true",
      }
    }
  >
    1
  </ForwardRef(Link)>
  <SecurityHotspotIcon
    className="big-spacer-left little-spacer-right"
  />
  metric.new_security_hotspots.name
  <HelpTooltip
    className="little-spacer-left"
    overlay="tooltip text"
  />
</Fragment>
`;

exports[`should render correctly for vulnerabilities 1`] = `
<Fragment>
  <ForwardRef(Link)
    aria-label="overview.see_list_of_x_y_issues.1.0.metric.vulnerabilities.name"
    className="overview-measures-value text-light"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?pullRequest=1001&resolved=false&types=VULNERABILITY&inNewCodePeriod=false&id=my-project",
      }
    }
  >
    1
  </ForwardRef(Link)>
  <VulnerabilityIcon
    className="big-spacer-left little-spacer-right"
  />
  metric.vulnerabilities.name
</Fragment>
`;

exports[`should render correctly for vulnerabilities 2`] = `
<Fragment>
  <ForwardRef(Link)
    aria-label="overview.see_list_of_x_y_issues.1.0.metric.new_vulnerabilities.name"
    className="overview-measures-value text-light"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?pullRequest=1001&resolved=false&types=VULNERABILITY&inNewCodePeriod=true&id=my-project",
      }
    }
  >
    1
  </ForwardRef(Link)>
  <VulnerabilityIcon
    className="big-spacer-left little-spacer-right"
  />
  metric.new_vulnerabilities.name
</Fragment>
`;

exports[`should render correctly if no values are present 1`] = `
<Fragment>
  <span
    aria-label="no_data"
    className="overview-measures-empty-value"
  />
  <BugIcon
    className="big-spacer-left little-spacer-right"
  />
  metric.bugs.name
</Fragment>
`;
